<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AgeVerificationFailureActivity"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_verification_unsuccessful"
        android:fontFamily="@font/plusjakartasans_bold"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ivFailureIcon"
        app:layout_constraintVertical_chainStyle="packed"/>

    <ImageView
        android:id="@+id/ivFailureIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/estimation_failure"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toTopOf="@id/tvInstruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/please_show_id_to_cashier"
        android:fontFamily="@font/plusjakartasans_bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/ivFailureIcon"
        app:layout_constraintBottom_toTopOf="@id/btnIdScan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnIdScan"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="64dp"
        android:text="@string/verify_age_with_id_scan"
        android:textColor="@color/white"
        android:background="@drawable/button_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tvInstruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/plus18_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_plus18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
