<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChooseVerificationActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plusjakartasans_bold"
        android:text="@string/choose_verification_method"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnFaceScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnFaceScan"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_primary"
        android:drawableEnd="@drawable/ic_eye"
        android:fontFamily="@font/plusjakartasans_bold"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="10dp"
        android:text="@string/estimate_age_with_face_scan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnIdScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnIdScan"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_primary"
        android:drawableEnd="@drawable/ic_card"
        android:fontFamily="@font/plusjakartasans_bold"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/verify_age_with_id_scan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFaceScan"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/plus18_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_plus18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
